# Python-UV

./: .gitignore  README.md
.devcontainer/: devcontainer.json
TestProject/: README.md  hello.py
UV Basics/TestProject/: pyproject.toml
UV Basics/UV_FastApi/: README.md  hello.py  pyproject.toml
UV Basics/UV_Litellm/: README.md  pyproject.toml
UV_CrewAi/: README.md  crewai_flow.html  fact.md  pyproject.toml
UV_CrewAi/src/uv_crewai/: call_llm.py  main.py  route_flow.py
UV_Litellm/: hello.py
UV_Streamlit/: pyproject.toml
UV_Streamlit/src/uv_streamlit/: __init__.py  chatbot.py
